objects/LLC_BI__Analyzed_Account__c.object
<CustomObject>
    <fields>
        <fullName>LLC_BI__ACH_Pre_Funding_Requirement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ACH Pre-Funding Requirement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Account_Action__c</fullName>
        <label>Account Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Add</fullName>
                </value>
                <value>
                    <fullName>Revise</fullName>
                </value>
                <value>
                    <fullName>Cancel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Account_Filter_Amount__c</fullName>
        <description>ACH Analysed Account Filter Amount. Displayed through Analyzed Account at Order Entry.</description>
        <label>Account Filter Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Account_Notice_Type__c</fullName>
        <label>Account Notice Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Incoming</fullName>
                </value>
                <value>
                    <fullName>Outgoing</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Account_Reconciliation_Plan__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account Reconciliation Plan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Account_Serial_Number_Range_End__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Serial Number Range - End</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Account_Serial_Number_Range_Start__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Serial Number Range - Start</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Account_Stale_Dating_Calendar_Days__c</fullName>
        <label>Account Stale Dating (Calendar Days)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Analyzed_Account_Type__c</fullName>
        <description>This picklist field indicates the type of analyzed account that you can associate with the treasury service. This field is not required and you may customize the value(s) to match your financial institution&apos;s needs.</description>
        <label>Analyzed Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DDA</fullName>
                    <default>true</default>
                    <label>DDA</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Balance_Reporting__c</fullName>
        <label>Balance Reporting</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Prior Day</fullName>
                </value>
                <value>
                    <fullName>Same Day</fullName>
                </value>
                <value>
                    <fullName>Controlled Disbursement</fullName>
                </value>
                <value>
                    <fullName>Balance Info</fullName>
                </value>
                <value>
                    <fullName>BAI Files Transfer</fullName>
                </value>
                <value>
                    <fullName>No Information</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Batch_Import_to_this_Name_ID_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Batch Import to this Name/ID Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Book_Transfer_Daily_Limit__c</fullName>
        <label>Book Transfer Daily Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Book_Transfers__c</fullName>
        <label>Book Transfers</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>From</fullName>
                </value>
                <value>
                    <fullName>To</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Deposit_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>--DEPRECATED--
        	This field is being deprecated. Use Deposit Reference.</description>
        <label>-D Deposit Account</label>
        <referenceTo>LLC_BI__Deposit__c</referenceTo>
        <relationshipLabel>Analyzed Accounts</relationshipLabel>
        <relationshipName>Analyzed_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Deposit_Reference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Deposit Account Reference</description>
        <label>Deposit Reference</label>
        <referenceTo>LLC_BI__Deposit__c</referenceTo>
        <relationshipLabel>Analyzed Accounts (Deposit Reference)</relationshipLabel>
        <relationshipName>Deposit_Service</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Deposit_Ticket_Limit__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Deposit Ticket Limit</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__ERD__c</fullName>
        <label>ERD</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DDA</fullName>
                </value>
                <value>
                    <fullName>SVA</fullName>
                </value>
                <value>
                    <fullName>Time</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Electronic_Reporting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Electronic Reporting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Exception_Account_for_Returns__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exception Account for Returns</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Frequency_of_Issue_Files__c</fullName>
        <label>Frequency of Issue Files</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Funding_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Funding Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Location_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Location Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Master_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if Master Account for Zero Balance Account</description>
        <inlineHelpText>Check if Master Account for Zero Balance Account</inlineHelpText>
        <label>Master Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Maximum_Daily_Deposit_Amount__c</fullName>
        <label>Maximum Daily Deposit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Maximum_Deposit_Amount_Per_Check__c</fullName>
        <label>Maximum Deposit Amount Per Check</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Maximum_Dollar_Range__c</fullName>
        <label>Maximum Dollar Range</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Minimum_Dollar_Range__c</fullName>
        <label>Minimum Dollar Range</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Peg_Balance__c</fullName>
        <label>Peg Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Percentage_of_Returned_Transactions__c</fullName>
        <label>Percentage of Returned Transactions</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Positive_Pay__c</fullName>
        <label>Positive Pay</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Full</fullName>
                </value>
                <value>
                    <fullName>Partial</fullName>
                </value>
                <value>
                    <fullName>Reverse</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Relationship__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Relationship</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Analyzed Accounts</relationshipLabel>
        <relationshipName>Analyzed_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Settlement_or_Offset_account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Settlement or Offset account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Cancel</fullName>
                </value>
                <value>
                    <fullName>In-Active</fullName>
                </value>
                <value>
                    <fullName>In-Progress</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Revise</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Stop_Payment__c</fullName>
        <label>Stop Payment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Add</fullName>
                </value>
                <value>
                    <fullName>Change</fullName>
                </value>
                <value>
                    <fullName>Delete</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Treasury_Service_Reference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Treasury Service Reference</label>
        <referenceTo>LLC_BI__Treasury_Service__c</referenceTo>
        <relationshipName>Deposit_Service_Rel</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Treasury_Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Treasury Service</label>
        <referenceTo>LLC_BI__Treasury_Service__c</referenceTo>
        <relationshipLabel>Analyzed Accounts</relationshipLabel>
        <relationshipName>Analyzed_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Wire_Daily_Limit__c</fullName>
        <label>Wire Daily Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Wire_Detail__c</fullName>
        <label>Wire Detail</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Analyzed Account</label>
    <listViews>
        <fullName>LLC_BI__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Deposit Service  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Analyzed Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>